# tradeguard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  rules.example.yaml  rules.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: cli.py  db.py  grouping.py  ingest.py  main.py  models.py  reports.py  sample.py  schemas.py  stats.py
backend/app/api/: __init__.py  deps.py  imports.py  reports.py  rules.py  stats.py  trades.py  violations.py
backend/app/importers/: __init__.py  base.py  generic.py  webull.py
backend/app/rules/: __init__.py  builtin.py  engine.py  loader.py
backend/tests/: conftest.py  test_api_app.py  test_api_imports.py  test_api_reports.py  test_api_rules.py  test_api_stats.py  test_api_trades.py  test_api_violations.py  test_grouping.py  test_importers.py  test_ingest_cli.py  test_reports.py  test_rules_builtin.py  test_rules_engine.py  test_rules_loader.py  test_sample.py  test_stats.py
backend/tests/fixtures/: generic_sample.csv  webull_day_40_fills.csv  webull_orders_iso_times.csv  webull_orders_sample.csv  webull_paper_orders_sample.csv  webull_sample.csv
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/discipline/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: CalendarHeatmap.tsx  EquityCurve.tsx  Nav.tsx  ViolationFeed.tsx  ui.tsx
frontend/src/lib/: api.ts  format.ts  useApi.ts
sample_data/: webull_orders_two_weeks.csv
(+2 files in other folders)
